# nesse

./: .gitignore  CMakeLists.txt  README.md  main.odin
src/: cpu.c  cpu.h  cpu.odin  instruction.odin  main.c  memory.odin  nesse.odin  nesses.odin  opcode.odin  utils.h  utils.odin
test/: test_instructions.odin  test_status_registers_proc.odin
